==> rovesoul/ESP32C3_JLC_DM/main/OLED.c <==
#include "OLED.h"

void OLED_WriteCommand(uint8_t Command)
{
    uint8_t writebuffer[2];

    writebuffer[0] = 0x00;
    writebuffer[1] = Command;
    ESP_ERROR_CHECK(i2c_master_transmit(oled_dev_handle, writebuffer, 2, -1));
}

void OLED_WriteData(uint8_t *Data, uint8_t Count)
{
	uint8_t i;
    uint8_t writebuffer[Count+1];

    writebuffer[0] = 0x40;

    for (i = 0; i < Count; i ++)
	{
		writebuffer[i+1] = Data[i];
	}
    ESP_ERROR_CHECK(i2c_master_transmit(oled_dev_handle, writebuffer, Count+1, -1));
}

void OLED_Init(int port, uint8_t add, int scl, int sda, int speed)
{
    //配置I2C总线
    i2c_master_bus_config_t oled_i2c_mst_cfg = 
    {
        .clk_source = I2C_CLK_SRC_DEFAULT,      //使用默认时钟源
        .i2c_port = port,                       //指定I2C端口号
        .scl_io_num = scl,                      //指定SCL引脚号
        .sda_io_num = sda,                      //指定SDA引脚号
        .glitch_ignore_cnt = 7,                 //设置毛刺忽略计数
        .flags.enable_internal_pullup = true,  //禁用内部上拉电阻（前提是已经外部上拉）
    };
    
    //创建I2C总线并获取句柄
    ESP_ERROR_CHECK(i2c_new_master_bus(&oled_i2c_mst_cfg, &oled_bus_handle));

    //配置I2C从机设备
    i2c_device_config_t oled_dev_cfg = 
    {
        .dev_addr_length = I2C_ADDR_BIT_LEN_7,  //设置设备地址长度为7位
        .device_address = add >> 1,             //指定设备地址
        .scl_speed_hz = speed,                  //设置I2C时钟速度
        .flags.disable_ack_check = false,       //启用ACK检查
    };
    
    //将设备添加到I2C总线并获取设备句柄
    ESP_ERROR_CHECK(i2c_master_bus_add_device(oled_bus_handle, &oled_dev_cfg, &oled_dev_handle));
	
	/*写入一系列的命令，对OLED进行初始化配置*/
	OLED_WriteCommand(0xAE);	//设置显示开启/关闭，0xAE关闭，0xAF开启
	
	OLED_WriteCommand(0xD5);	//设置显示时钟分频比/振荡器频率
	OLED_WriteCommand(0x80);	//0x00-0xFF
	
	OLED_WriteCommand(0xA8);	//设置多路复用率
	OLED_WriteCommand(0x3F);	//0x0E-0x3F
	
	OLED_WriteCommand(0xD3);	//设置显示偏移
	OLED_WriteCommand(0x00);	//0x00-0x7F
	
	OLED_WriteCommand(0x40);	//设置显示开始行，0x40-0x7F
	
	OLED_WriteCommand(0xA1);	//设置左右方向，0xA1正常，0xA0左右反置
	
	OLED_WriteCommand(0xC8);	//设置上下方向，0xC8正常，0xC0上下反置

	OLED_WriteCommand(0xDA);	//设置COM引脚硬件配置
	OLED_WriteCommand(0x12);
	
	OLED_WriteCommand(0x81);	//设置对比度
	OLED_WriteCommand(0xCF);	//0x00-0xFF

	OLED_WriteCommand(0xD9);	//设置预充电周期
	OLED_WriteCommand(0xF1);

	OLED_WriteCommand(0xDB);	//设置VCOMH取消选择级别
	OLED_WriteCommand(0x30);

	OLED_WriteCommand(0xA4);	//设置整个显示打开/关闭

	OLED_WriteCommand(0xA6);	//设置正常/反色显示，0xA6正常，0xA7反色

	OLED_WriteCommand(0x8D);	//设置充电泵
	OLED_WriteCommand(0x14);

	OLED_WriteCommand(0xAF);	//开启显示
	
	OLED_Clear();				//清空显存数组
	OLED_Update();				//更新显示，清屏，防止初始化后未显示内容时花屏
}
